@@ -1,6 +1,11 @@
+2003-08-11  Matthias Clasen  <maclas@gmx.de>
+
+	* acinclude.m4: Copy newer versions of JH_CHECK_XML_CATALOG and JH_PATH_XML_CATALOG from
+	gtk-doc to enable configuring without xmlcatalog in PATH.  (#119115)
+
 2003-08-10  Matthias Clasen  <maclas@gmx.de>
 
-	* gtk/gtkwidget.h (struct _GtkWidget): Mark some members as public. 
+	* gtk/gtkwidget.h (struct _GtkWidget): Mark some members as public.  (#119463) 
 
 2003-08-09  Noah Levitt  <nlevitt@columbia.edu>
 
