@@ -22,9 +22,10 @@ AC_DEFUN([GTK_ADD_LIB],
   esac
 ])
 
+
 # Checks the location of the XML Catalog
 # Usage:
-#   JH_PATH_XML_CATALOG
+#   JH_PATH_XML_CATALOG([ACTION-IF-FOUND], [ACTION-IF-NOT-FOUND])
 # Defines XMLCATALOG and XML_CATALOG_FILE substitutions
 AC_DEFUN([JH_PATH_XML_CATALOG],
 [
@@ -33,20 +34,27 @@ AC_DEFUN([JH_PATH_XML_CATALOG],
               AC_HELP_STRING([--with-xml-catalog=CATALOG],
                              [path to xml catalog to use]),,
               [with_xml_catalog=/etc/xml/catalog])
+  jh_found_xmlcatalog=true
   XML_CATALOG_FILE="$with_xml_catalog"
+  AC_SUBST([XML_CATALOG_FILE])
   AC_MSG_CHECKING([for XML catalog ($XML_CATALOG_FILE)])
   if test -f "$XML_CATALOG_FILE"; then
     AC_MSG_RESULT([found])
   else
+    jh_found_xmlcatalog=false
     AC_MSG_RESULT([not found])
-    AC_MSG_ERROR([XML catalog not found])
   fi
-  AC_SUBST([XML_CATALOG_FILE])
 
   # check for the xmlcatalog program
   AC_PATH_PROG(XMLCATALOG, xmlcatalog, no)
   if test "x$XMLCATALOG" = xno; then
-    AC_MSG_ERROR([could not find xmlcatalog program])
+    jh_found_xmlcatalog=false
+  fi
+
+  if $jh_found_xmlcatalog; then
+    ifelse([$1],,[:],[$1])
+  else
+    ifelse([$2],,[AC_MSG_ERROR([could not find XML catalog])],[$2])
   fi
 ])
 
@@ -55,9 +63,10 @@ AC_DEFUN([JH_PATH_XML_CATALOG],
 #   JH_CHECK_XML_CATALOG(URI, [FRIENDLY-NAME], [ACTION-IF-FOUND], [ACTION-IF-NOT-FOUND])
 AC_DEFUN([JH_CHECK_XML_CATALOG],
 [
-  AC_REQUIRE([JH_PATH_XML_CATALOG])dnl
+  AC_REQUIRE([JH_PATH_XML_CATALOG],[JH_PATH_XML_CATALOG(,[:])])dnl
   AC_MSG_CHECKING([for ifelse([$2],,[$1],[$2]) in XML catalog])
-  if AC_RUN_LOG([$XMLCATALOG --noout "$XML_CATALOG_FILE" "$1" >&2]); then
+  if $jh_found_xmlcatalog && \
+     AC_RUN_LOG([$XMLCATALOG --noout "$XML_CATALOG_FILE" "$1" >&2]); then
     AC_MSG_RESULT([found])
     ifelse([$3],,,[$3
 ])dnl
