@@ -1,6 +1,6 @@
 2003-08-10  Matthias Clasen  <maclas@gmx.de>
 
-	* gtk/tmpl/gtkwidget.sgml: Document public GtkWidget members.
+	* gtk/tmpl/gtkwidget.sgml: Document public GtkWidget members.  (#119463)
 
 2003-08-09  Matthias Clasen  <maclas@gmx.de>
 
